# FrontGardenRailway

./: .gitignore  .gitmodules  README.md  better_wall_aligning_thingy.stl  better_wall_graduated_end_back.stl  better_wall_graduated_end_front.stl  better_wall_joining_strip.stl  conduit_connector.blend  conduit_connector.stl  dock_base.blend  dock_base_edge_long.stl  dock_base_edge_short.stl  dock_base_face.stl  down_pipe_cap.blend  down_pipe_cap.stl  filter_wall.blend  filter_wall_back.stl  filter_wall_back_end.stl  filter_wall_chunky_clip.stl  filter_wall_clip.stl  filter_wall_joining_strip.stl  filter_wall_lower.stl  filter_wall_truss.stl  filter_wall_upper.stl  filter_wall_upper_end.stl  hydrofoil.blend  paving.blend  paving.stl  plumbing.blend  radius_1121.crv  road_part_a_bridge.stl  road_part_a_bridge_spacer.stl  road_part_a_west.stl  road_part_b.stl  road_part_b_west.stl  spiral_staircase.blend  spiral_staircase_base.stl  spiral_staircase_base_plate.stl  spiral_staircase_connector.stl  spiral_staircase_step.stl  (+32 more)
blender/: README.md  bench.blend  bench.stl  better_wall.blend  better_wall_edging.stl  better_wall_wall.stl  conduit_connector.blend  conduit_connector.stl  filter_wall_back_end.stl  filter_wall_front_end.stl  signs.blend  signs_danger_no_diving.stl  spiral_staircase_step.stl  spiral_staircase_top_platform.stl  spiral_staircase_top_platform_side_wall_top.stl  spiral_staircase_weather_vane.stl  spiral_staircase_weather_vane_axle.stl  spiral_staircase_weather_vane_w_e.stl  steps_step.stl  steps_wall.stl  sump_cap_side_wall_outer.stl  sump_cap_side_wall_outer_end_1.stl  supporting_wall.stl  supporting_wall_mould_side_2.stl  track-side_path_rock_wall_mould_brace_1.stl  track-side_path_rock_wall_mould_brace_3.stl  track-side_path_rock_wall_mould_brace_5.stl  viaduct_experiment_mould.stl
blender/viaduct_final/: viaduct_curved_lower.stl  viaduct_curved_mould_upper_2.stl  viaduct_straight_lower.stl  viaduct_straight_mould_brace.stl  viaduct_straight_mould_joiner.stl  viaduct_straight_mould_upper_1.stl
software/: README.md  astyle.cfg  astyle.py
software/esp32/: README.md  nodes_esp32_deploy.json  nodes_esp32_deploy.py
software/esp32/applications/level_gauge/: CMakeLists.txt  README.md  level_gauge.code-workspace  sdkconfig
software/esp32/applications/level_gauge/main/: CMakeLists.txt  Kconfig.projbuild  level_gauge.c
software/esp32/applications/test/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  test.code-workspace
software/esp32/applications/test/main/: CMakeLists.txt  test.c
software/esp32/components/fgr_debug/: CMakeLists.txt  Kconfig.projbuild  fgr_debug.c
software/esp32/components/fgr_debug/api/: fgr_debug.h
software/esp32/components/fgr_heap/: CMakeLists.txt  fgr_heap.c
software/esp32/components/fgr_heap/api/: fgr_heap.h  fgr_heap_wrapper.h
software/esp32/components/fgr_lib/: CMakeLists.txt  Kconfig.projbuild  fgr_lib.c
software/esp32/components/fgr_lib/api/: fgr_lib.h
software/esp32/components/fgr_log/: CMakeLists.txt  Kconfig.projbuild  fgr_log.c
software/esp32/components/fgr_log/api/: fgr_log.h
software/esp32/components/fgr_metrics/: CMakeLists.txt  Kconfig.projbuild  fgr_metrics.c
software/esp32/components/fgr_metrics/api/: fgr_metrics.h
software/esp32/components/fgr_monitor/: CMakeLists.txt  fgr_monitor.c
software/esp32/components/fgr_monitor/api/: fgr_monitor.h
software/esp32/components/fgr_msg/: CMakeLists.txt  Kconfig.projbuild  fgr_msg.c
software/esp32/components/fgr_msg/api/: fgr_msg.h
software/esp32/components/fgr_network/: CMakeLists.txt  Kconfig.projbuild  fgr_network.c
software/esp32/components/fgr_network/api/: fgr_network.h
software/esp32/components/fgr_nvs/: CMakeLists.txt  fgr_nvs.c
software/esp32/components/fgr_nvs/api/: fgr_nvs.h
software/esp32/components/fgr_ota/: CMakeLists.txt  Kconfig.projbuild  fgr_ota.c
software/esp32/components/fgr_ota/api/: fgr_ota.h
software/esp32/components/fgr_ping/: CMakeLists.txt  fgr_ping.c
software/esp32/components/fgr_ping/api/: fgr_ping.h
software/esp32/components/fgr_rcwl9610a/: CMakeLists.txt  Kconfig.projbuild  fgr_rcwl9610a.c
software/esp32/components/fgr_rcwl9610a/api/: fgr_rcwl9610a.h
software/esp32/components/fgr_rram/: CMakeLists.txt  fgr_rram.c
software/esp32/components/fgr_rram/api/: fgr_rram.h
software/esp32/components/fgr_socket/: CMakeLists.txt  fgr_socket.c
software/esp32/components/fgr_socket/api/: fgr_socket.h
software/esp32/components/fgr_task/: CMakeLists.txt  fgr_task.c
software/esp32/components/fgr_task/api/: fgr_task.h
software/esp32/components/fgr_time/: CMakeLists.txt  fgr_time.c
software/esp32/components/fgr_time/api/: fgr_time.h
software/esp32/components/fgr_util/: CMakeLists.txt  fgr_util.c
software/esp32/level_gauge/: README.md
software/esp32/sdkconfig_fragments/: chip_esp32s3  defaults  flash_4mbyte  flash_4mbyte_partitions.csv  led_multicolour  led_multicolour_grb  version_injection.cmake
software/pi/: LibLogger.py  README.md  add_node.py  binary_file_version.py  clear_node_ghosts.sh  controller.py  crash_decoder.py  https_server.json  https_server.py  journal_ssd_check.sh  log_server.py  log_viewer.py  nodes.json  performance_check.sh  pi_installation.md  pi_read_only_file_system.md  pi_services.md  pi_wifi_ap.md  pi_wifi_dhcp_mac.md  web_controller (Copy).py  web_controller.py
software/pi/nodes/: node_level_gauge.py  node_test.json  node_test.py
software/protocol/: README.md  fgr_protocol.h  fgr_protocol.py  generate_python_protocol_module.py
software/server_certs/: ca_cert.pem
vcarve/: README.md
viaduct_final/: viaduct_curved_lower.stl  viaduct_curved_mould_brace.stl  viaduct_curved_mould_joiner_1.stl  viaduct_curved_mould_joiner_2.stl  viaduct_curved_mould_lower.stl  viaduct_curved_mould_upper_1.stl  viaduct_curved_mould_upper_floor.stl  viaduct_straight_lower.stl  viaduct_straight_mould_lower.stl  viaduct_straight_mould_upper_2.stl  viaduct_straight_mould_upper_floor.stl  viaduct_wall_inner.stl  viaduct_wall_outer.stl
(+1 files in other folders)
